@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* LiveServlet.getHome() moves to Session
+	this change is not backwards compatible
 * bugfix: LiveServlet.getHome() is called within a cope transaction in all cases
 * session serialization relies on a serializable model to be edited,
 	use Model.enableSerialization
